# AstraNet

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  run.py
astra/src/ai_modules/: chat.py
astra/src/cogs/: on_join.py
astra/src/utils/: changenumber_check.py  client.py  depot_check.py  handler.py  load.py  services.py  thread.py
astra_core/: go.mod  main.go
astra_core/api/: server.go
astra_core/database/: db.go
astra_core/depot/: downloader.go
astra_core/diff/: tracker.go  unified.go
astra_core/extractor/: protobuf.go  strings.go
astra_core/monitor/: monitor.go  status.go
astra_core/notifier/: discord.go
astra_core/steam/: webclient.go
astra_core/steamcmd/: client.go  parser.go
data_engine/: Cargo.toml
data_engine/src/: main.rs
data_engine/src/modules/: create_file.rs  diff_comparer.rs  extract_data_from_value.rs  fetch_data_from_server.rs  mod.rs  update_app_info.rs  wjson.rs  write_to_file.rs
rest_engine/: package-lock.json  package.json
rest_engine/src/: server.ts
rest_engine/src/modules/clients/: steam.ts
